last button added

--- a/index.html
+++ b/index.html
@@ -586,6 +586,12 @@
       </div>
     </section>
     <!-- section end -->
+    <div>
+      <button
+        class="border border-[#3a85f4] rounded-[50px] py-1 px-5 text-[#3a85f4] hover:bg-[#3a85f4] hover:text-[#fff] transition">
+        Смотреть все
+      </button>
+    </div>
     <!-- footer start -->
     <footer class="bg-[#262628] text-[#fff] py-6">
       <div
