--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
       </div>
     </section>
     <!-- section end -->
-    <div>
+    <div class="flex justify-center py-10">
       <button
         class="border border-[#3a85f4] rounded-[50px] py-1 px-5 text-[#3a85f4] hover:bg-[#3a85f4] hover:text-[#fff] transition">
         Смотреть все
